--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,5 +13,81 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:text="Hello World!"
+        android:id="@+id/textView" />
+
+    <Button
+        android:text="SendStringToJni"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textView"
+        android:layout_marginTop="18dp"
+        android:id="@+id/sendStringToJni"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentStart="true" />
+
+    <Button
+        android:text="GetDataFromC"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/getDataFromC"
+        android:layout_marginTop="23dp"
+        android:layout_below="@+id/sendStringToJni"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true" />
+
+    <Button
+        android:text="GetArrayListPerson"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:id="@+id/getArrayListPerson"
+        android:layout_below="@+id/getDataFromC"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true" />
+
+    <Button
+        android:text="CSetField"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="14dp"
+        android:id="@+id/cSetField"
+        android:layout_below="@+id/getArrayListPerson"
+        android:layout_alignParentStart="true" />
+
+    <Button
+        android:text="staticField"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/staticField"
+        android:layout_alignTop="@+id/cSetField"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="15dp" />
+
+    <Button
+        android:text="cAccessJavaMethod"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="22dp"
+        android:id="@+id/cAccessJavaMethod"
+        android:layout_below="@+id/staticField"
+        android:layout_alignEnd="@+id/cSetField" />
+
+    <Button
+        android:text="cAccessJavaStaticMethod"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/cAccessJavaStaticMethod"
+        android:layout_alignBottom="@+id/cAccessJavaMethod"
+        android:layout_alignParentEnd="true" />
+
+    <Button
+        android:text="gotoSecondActivity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="18dp"
+        android:id="@+id/gotoSecondActivity"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentStart="true" />
 </RelativeLayout>
